--- a/parts/partexplorer/partexplorerformbase.ui
+++ b/parts/partexplorer/partexplorerformbase.ui
@@ -23,6 +23,9 @@
     <property name="caption">
         <string>PartExplorer</string>
     </property>
+    <property name="toolTip" stdset="0">
+        <string>This is a front-end to KDE's KTrader class: search your KDE documentation for more info about KDE services' trading</string>
+    </property>
     <vbox>
         <property name="name">
             <cstring>unnamed</cstring>
@@ -40,10 +43,10 @@
                 </sizepolicy>
             </property>
             <property name="text">
-                <string>Type</string>
+                <string>KDE Service type</string>
             </property>
             <property name="toolTip" stdset="0">
-                <string>i.e. KDevelop/Plugin, KParts/ReadWritePart, ...</string>
+                <string></string>
             </property>
         </widget>
         <widget class="QLineEdit">
@@ -57,6 +60,9 @@
                     <horstretch>0</horstretch>
                     <verstretch>0</verstretch>
                 </sizepolicy>
+            </property>
+            <property name="toolTip" stdset="0">
+                <string>i.e. KDevelop/Plugin, KParts/ReadWritePart, ...</string>
             </property>
         </widget>
         <widget class="QLabel">
@@ -72,10 +78,10 @@
                 </sizepolicy>
             </property>
             <property name="text">
-                <string>Additional constraints</string>
+                <string>Additional costraints</string>
             </property>
             <property name="toolTip" stdset="0">
-                <string>i.e. ([X-KDevelop-Scope]='Global')</string>
+                <string></string>
             </property>
         </widget>
         <widget class="QTextEdit">
@@ -90,6 +96,9 @@
                     <verstretch>0</verstretch>
                 </sizepolicy>
             </property>
+            <property name="toolTip" stdset="0">
+                <string>i. e. ([X-KDevelop-Scope]='Global')</string>
+            </property>
         </widget>
         <widget class="QPushButton">
             <property name="name">
@@ -97,6 +106,9 @@
             </property>
             <property name="text">
                 <string>&amp;Start search</string>
+            </property>
+            <property name="toolTip" stdset="0">
+                <string>Perform the query</string>
             </property>
         </widget>
         <widget class="QLabel">
@@ -112,7 +124,7 @@
                 </sizepolicy>
             </property>
             <property name="text">
-                <string>Results:</string>
+                <string>Results</string>
             </property>
         </widget>
     </vbox>
